--- a/05_probability/probability.Rmd
+++ b/05_probability/probability.Rmd
@@ -98,9 +98,6 @@ Within the nine shot attempts, there are six streaks, which are separated by a
 "|" above. Their lengths are one, zero, two, zero, zero, zero (in order of 
 occurrence).
 
-1.  What does a streak length of 1 mean, i.e. how many hits and misses are in a 
-    streak of 1? What about a streak length of 0?
-
 Counting streak lengths manually for all 133 shots would get tedious, so we'll
 use the custom function `calc_streak` to calculate them, and store the results
 in a data frame called `kobe_streak` as the `length` variable.
@@ -115,12 +112,12 @@ We can then take a look at the distribution of these streak lengths.
 
 ```{r plot-streak-kobe}
 ggplot(data = kobe_streak, aes(x = length)) +
-  geom_bar()
+  geom_bar() + ylim(0,50) + xlim(0,6) 
+## these xlim and ylims help us keep the scales the same to make comparison between bar plots easier
 ```
 
-1.  Describe the distribution of Kobe's streak lengths from the 2009 NBA finals. 
-    What was his typical streak length? How long was his longest streak of 
-    baskets? Make sure to include the accompanying plot in your answer.
+1.  a.) What was Kobe's typical streak length (or mode)? b.) How long was his longest streak of 
+    baskets (or maximum)? Make sure to include the accompanying plot in your answer.
 
 ## [Compared to What?](https://youtu.be/VF9-sEbqDvU?t=162)
 
@@ -182,8 +179,8 @@ one slip says `heads` and the other says `tails`. The function `sample` draws
 one slip from the hat and tells us if it was a head or a tail. Note `sample` (with argument `size`) works on a vector while `slice_sample` (with argument `n`) works on a data frame.
 
 Run the second command listed above several times. Just like when flipping a 
-coin, sometimes you'll get a heads, sometimes you'll get a tails, but in the 
-long run, you'd expect to get roughly equal numbers of each.
+coin, sometimes you'll get a heads, sometimes you'll get a tails, but *in the 
+long run*, you'd expect to get roughly equal numbers of each.
 
 If you wanted to simulate flipping a fair coin 100 times, you could either run 
 the function 100 times or, more simply, adjust the `size` argument, which 
@@ -234,6 +231,13 @@ can always check out its help file.
 ```
 
 
+
+1.  In your simulation of flipping the unfair coin 100 times, how many flips 
+    came up heads? Include the code for sampling the unfair coin in your response.
+    Since the markdown file will run the code, and generate a new sample each time
+    you *Knit* it, you should also "set a seed" **before** you sample. Read more 
+    about setting a seed below.
+    
 <div id="boxedtext">
 **A note on setting a seed:** Remember that setting a seed will cause R to select the same 
 sample each time you knit your document. This will make sure your results don't
@@ -247,13 +251,6 @@ The number above is completely arbitraty. If you need inspiration, I use the num
 use each seed only once in a document. Remember to do this **before** you sample
 in the exercises.
 </div>
-
-1.  In your simulation of flipping the unfair coin 100 times, how many flips 
-    came up heads? Include the code for sampling the unfair coin in your response.
-    Since the markdown file will run the code, and generate a new sample each time
-    you *Knit* it, you should also "set a seed" **before** you sample. Read more 
-    about setting a seed below.
-    
 
 
 
@@ -274,7 +271,7 @@ you need to align both their shooting percentage and the number of attempted sho
 1.  What change needs to be made to the `sample` function so that it reflects a 
     shooting percentage of 45%? Make this adjustment, then run a simulation to 
     sample 133 shots. Assign the output of this simulation to a new object called
-    `sim_basket`.
+    `sim_basket`. (this answer will only involve code)
 
 Note that we've named the new vector `sim_basket`, the same name that we gave to
 the previous vector reflecting a shooting percentage of 50%. In this situation, 
@@ -296,22 +293,15 @@ a hot hand.
 ### Comparing Kobe Bryant to the Independent Shooter
 
 1.  Using `calc_streak`, compute the streak lengths of `sim_basket`, and
-    save the results in a data frame called `sim_streak`.
+    save the results in a data frame called `sim_streak`. (this answer will only involve code)
 
-1.  Describe the distribution of streak lengths. What is the typical streak 
-    length for this simulated independent shooter with a 45% shooting percentage?
-    How long is the player's longest streak of baskets in 133 shots? Make sure
+1. a.) What is the typical streak length for this simulated independent shooter with a 45% shooting percentage (in `sim_streak`)? b.) How long is the player's longest streak of baskets in 133 shots? Make sure
     to include a plot in your answer.
 
-1.  If you were to run the simulation of the independent shooter a second time, 
-    how would you expect its streak distribution to compare to the distribution 
-    from the question above? Exactly the same? Somewhat similar? Totally 
-    different? Explain your reasoning.
-
-1.  How does Kobe Bryant's distribution of streak lengths compare to the 
-    distribution of streak lengths for the simulated shooter? Using this 
+1.  a.) How does Kobe Bryant's distribution of streak lengths compare to the 
+    distribution of streak lengths for the simulated shooter? I recommend looking at two bar plots to decide. b.) Using this 
     comparison, do you have evidence that the hot hand model fits Kobe's 
-    shooting patterns? Explain.
+    shooting patterns? Explain. Hint: is the "hot hand" associated with longer or shorter streaks than an independent shooter?
     
 ## Deliverables
 
