--- a/08_simple_regression/simple_regression.Rmd
+++ b/08_simple_regression/simple_regression.Rmd
@@ -21,7 +21,7 @@ For those participating syncronously I will be available in the main Zoom room t
 
 For those of you participating asynchronously, alert me to technical challengs over Slack DM, and I will get back to you as soon as possible. For questions about the content of the lab, please sign up for an office hour time block. 
 
-Each of you should be writing and running code, examining output, and answering the exercises throughout the lab. However, you only need to turn in one final lab report. To do so, whoever was *not* the main recorder last week should be the main recorder of answers in the lab document this week. It may be helpful to share your screen. 
+Each of you should be writing and running code, examining output, and answering the exercises throughout the lab. However, you only need to turn in one final lab report. To do so, one of you can be the main recorder of answers in the lab document. It may be helpful to share your screen. You will be working with this same partner/group for the next lab, so you will switch roles next week. 
 
 You all should also feel free to ask and answer questions amongst yourselves via Zoom if participating synchronously or via Slack if participating asynchronously. Please note at the end of the lab document who you consulted for help.
 
@@ -46,12 +46,11 @@ about freedom.
 In this lab, you will explore and visualize the data using the **tidyverse** suite of 
 packages. The data can be found in the companion package for OpenIntro resources, **openintro**.
 
-Let's load the packages.
+Let's load the packages. 
 
 ```{r load-packages, message=FALSE}
 library(tidyverse)
 library(openintro)
-library(statsr)
 ```
 
 ### Creating a reproducible lab report
@@ -63,15 +62,12 @@ To create your new lab report, in RStudio, go to New File -> R Markdown... Then,
 The data we're working with is in the openintro package and it's called `hfi`, 
 short for Human Freedom Index.
 
-1.  What are the dimensions of the dataset?
+```{r}
+data(hfi)
+```
 
-1.  What type of plot would you use to display the relationship between the personal
-    freedom score, `pf_score`, and one of the other numerical variables? Plot 
-    this relationship using the variable `pf_expression_control` as the predictor.
-    Does the relationship look linear? If you knew a country's `pf_expression_control`,
-    or its score out of 10, with 0 being the most, of political pressures and 
-    controls on media content, would you be comfortable using a linear model to
-    predict the personal freedom score?
+
+1.  Plot the relationship between `pf_expression_control` (political pressures and controls on media content) and the personal freedom score, `pf_score` with `pf_expression_control` as the explanatory/predictor variable. Does the relationship look linear? 
 
 If the relationship looks linear, we can quantify the strength of the
 relationship with the correlation coefficient.
@@ -81,65 +77,7 @@ hfi %>%
   summarise(cor(pf_expression_control, pf_score, use = "complete.obs"))
 ```
 
-Here, we set the `use` argument to "complete.obs" since there are some observations
-of NA and we don't want those to count towards the calculation of the correlation.
-
-## Sum of squared residuals
-
-<div id="boxedtext">
-In this section, you will use an interactive function to investigate what we mean by "sum 
-of squared residuals". You will need to run this function in your console, not in your 
-markdown document. Running the function also requires that the `hfi` dataset is loaded 
-in your environment.
-</div>
-
-Think back to the way that we described the distribution of a single variable. 
-Recall that we discussed characteristics such as center, spread, and shape. It's
-also useful to be able to describe the relationship of two numerical variables, 
-such as `pf_expression_control` and `pf_score` above.
-
-1.  Looking at your plot from the previous exercise, describe the relationship 
-    between these two variables. Make sure to discuss the form, direction, and 
-    strength of the relationship as well as any unusual observations.
-
-Just as you've used the mean and standard deviation to summarize a single variable, 
-you can summarize the relationship between these two variables by finding the 
-line that best follows their association. Use the following interactive 
-function to select the line that you think does the best job of going through 
-the cloud of points. Note, we first need to filter out missing values since `plot_ss` expects complete cases.
-
-```{r plotss-expression-score, eval=FALSE}
-# library(tidyverse) ## make sure these are loaded locally
-# library(openintro)
-# library(statsr)
-hfi_nice = hfi %>% filter(!is.na(pf_score), !is.na(pf_expression_control))
-plot_ss(x = pf_expression_control, y = pf_score, data = hfi_nice)
-```
-
-After running this command, you'll be prompted to click two points on the plot 
-to define a line. Once you've done that, the line you specified will be shown in
-black and the residuals in blue. Note that there are 30 residuals, one for each 
-of the 30 observations. Recall that the residuals are the difference between the
-observed values and the values predicted by the line:
-
-\[
-  e_i = y_i - \hat{y}_i
-\]
-
-The most common way to do linear regression is to select the line that minimizes
-the sum of squared residuals. To visualize the squared residuals, you can rerun 
-the plot command and add the argument `showSquares = TRUE`.
-
-```{r plotss-expression-score-squares, eval=FALSE}
-plot_ss(x = pf_expression_control, y = pf_score, data = hfi_nice, showSquares = TRUE)
-```
-
-Note that the output from the `plot_ss` function provides you with the slope and
-intercept of your line as well as the sum of squares.
-
-1.  Using `plot_ss`, choose a line that does a good job of minimizing the sum of
-    squares. Run the function several times. What was the smallest sum of 
-    squares that you got? How does it compare to your partner's?
+Here, we set the `use` argument to "complete.obs" since there are some observations of NA and we don't want those to count towards the calculation of the correlation.
 
 ## The linear model
 
@@ -154,8 +92,7 @@ m1 <- lm(pf_score ~ pf_expression_control, data = hfi)
 
 The first argument in the function `lm` is a formula that takes the form 
 `y ~ x`. Here it can be read that we want to make a linear model of 
-`pf_score` as a function of `pf_expression_control`. The second argument specifies
-that R should look in the `hfi` data frame to find the two variables. Note `lm` can handle missing values, so we can use the full data set here.
+`pf_score` as a function of `pf_expression_control`. The second argument specifies that R should look in the `hfi` data frame to find the two variables. Note `lm` can handle missing values, so we can use the full data set here.
 
 The output of `lm` is an object that contains all of the information we need 
 about the linear model that was just fit. We can access this information using 
@@ -168,7 +105,8 @@ summary(m1)
 Let's consider this output piece by piece. First, the formula used to describe 
 the model is shown at the top. After the formula you find the five-number 
 summary of the residuals. The "Coefficients" table shown next is key; its first 
-column displays the linear model's y-intercept and the coefficient of `at_bats`.
+column displays the linear model's y-intercept and the coefficient of `pf_expression_control`.
+
 With this table, we can write down the least squares regression line for the 
 linear model:
 
@@ -179,14 +117,9 @@ linear model:
 One last piece of information we will discuss from the summary output is the 
 Multiple R-squared, or more simply, $R^2$. The $R^2$ value represents the 
 proportion of variability in the response variable that is explained by the 
-explanatory variable. For this model, 63.42% of the variability in runs is 
-explained by at-bats.
+explanatory variable. For this model, 63.42% of the variability in personal freedom score is explained by political pressures and controls on media content.
 
-1.  Fit a new model that uses `pf_expression_control` to predict `hf_score`, or
-    the total human freedom score. Using the estimates from the R output, write 
-    the equation of the regression line. What does the slope tell us in the 
-    context of the relationship between human freedom and the amount of political
-    pressure on media content?
+1. Fit a new model that uses `pf_expression_control` to predict the total human freedom score, `hf_score`. a.) Using the estimates from the R output, write the equation of the regression line. b.) Interpet the slope in the context of the relationship between human freedom and the amount of political pressure on media content? Remember to be careful with your language and avoid causal words.
 
 ## Prediction and prediction errors
 
@@ -200,7 +133,7 @@ ggplot(data = hfi, aes(x = pf_expression_control, y = pf_score)) +
 
 Here, we are literally adding a layer on top of our plot. `geom_smooth` creates
 the line by fitting a linear model. It can also show us the standard error `se`
-associated with our line, but we'll suppress that for now.
+associated with our line, but we'll suppress that for now (and talk about what it means later).
 
 This line can be used to predict $y$ at any value of $x$. When predictions are 
 made for values of $x$ that are beyond the range of the observed data, it is 
@@ -208,10 +141,7 @@ referred to as *extrapolation* and is not usually recommended. However,
 predictions made within the range of the data are more reliable. They're also 
 used to compute the residuals.
 
-1.  If someone saw the least squares regression line and not the actual data, how
-    would they predict a country's personal freedom school for one with a 6.7 rating
-    for `pf_expression_control`? Is this an overestimate or an underestimate, and
-    by how much? In other words, what is the residual for this prediction?
+1.  a.) What is the predicted value of a country's personal freedom score for one with a 6.7 rating for `pf_expression_control`? b.) If the true personal freedom score for this observation is 7.9, what is the residual for this prediction? 
 
 ## Model diagnostics
 
@@ -219,8 +149,28 @@ To assess whether the linear model is reliable, we need to check for (1)
 linearity, (2) nearly normal residuals, and (3) constant variability.
 
 **Linearity**: You already checked if the relationship between `pf_score` and 
-`pf_expression_control` is linear using a scatterplot. We should also verify this
-condition with a plot of the residuals vs. fitted (predicted) values.
+`pf_expression_control` is linear using a scatterplot. 
+
+</br>
+
+**Nearly normal residuals**: To check this condition, we can look at a histogram. 
+
+
+```{r hist-res}
+ggplot(data = m1, aes(x = .resid)) +
+  geom_histogram(binwidth = 25) +
+  xlab("Residuals")
+```
+
+
+1.  Based on the histogram, does the nearly 
+    normal residuals condition appear to be met?
+
+</br>
+
+**Constant variability**:
+
+In class we looked at the residuals vs. the explanatory variable. A similar residual plot is a plot of the residuals vs. fitted (predicted) values. We can interpret this plot in the same way.
 
 ```{r residuals}
 ggplot(data = m1, aes(x = .fitted, y = .resid)) +
@@ -237,66 +187,9 @@ fancy with the code here. After creating the scatterplot on the first layer
 check whether residuals are distributed around 0), and we also rename the axis 
 labels to be more informative.
 
-1.  Is there any apparent pattern in the residuals plot? What does this indicate
-    about the linearity of the relationship between the two variables?  
 
-</br>
+1.  Based on the residuals vs. fitted plot, does the constant variability condition appear to be met?
 
-**Nearly normal residuals**: To check this condition, we can look at a histogram. We'll learn more about the normal distribution in the next lab, but for now, here's what the shape of a normal distribution looks like.
-
-```{r}
-sim_norm <- data.frame(sim = rnorm(n = 100000, mean = 0, sd = 1))
-
-ggplot(data = sim_norm, aes(x = sim)) +
-        geom_histogram(aes(y = ..density..))
-```
-
-
-```{r hist-res}
-ggplot(data = m1, aes(x = .resid)) +
-  geom_histogram(binwidth = 25) +
-  xlab("Residuals")
-```
-
-We can also look at a normal probability plot of the residuals. We'll learn more about this plot in the next lab, but for now we want the points to roughly fall on the red line.
-
-```{r qq-res}
-ggplot(data = m1, aes(sample = .resid)) +
-geom_qq() + geom_qq_line(alpha = 0.7, color = "red", linetype = "dashed")
-```
-
-Note that the syntax for making a normal probability plot is a bit different 
-than what you're used to seeing: we set `sample` equal to the residuals instead 
-of `x`, and we set a statistical method `qq`, which stands for "quantile-quantile",
-another name commonly used for normal probability plots.
-
-1.  Based on the histogram and the normal probability plot, does the nearly 
-    normal residuals condition appear to be met?
-
-</br>
-
-**Constant variability**:
-
-1.  Based on the residuals vs. fitted plot, does the constant variability condition 
-    appear to be met?
-
-* * *
-
-## More Practice
-<div class="oyo">
-
--   Choose another freedom variable and a variable you think would strongly
-    correlate with it.. Produce a scatterplot of the two variables and fit a 
-    linear model. At a glance, does there seem to be a linear relationship?
-
--   How does this relationship compare to the relationship between 
-    `pf_expression_control` and `pf_score`? Use the $R^2$ values from the two 
-    model summaries to compare. Does your independent variable seem to predict
-    your dependent one better? Why or why not?
-
-
--   What's one freedom relationship you were most surprised about and why? Display
-    the model diagnostics for the regression model analyzing this relationship.
 
 ## Deliverables
 
@@ -304,9 +197,9 @@ When you are finished editing your Markdown document click the "Knit" button and
 
 Submit your Markdown document and knitted file to [Moodle](https://moodle.smith.edu/) as:
 
-LastName-LastName-L-08.Rmd  (add a third last name if applicable)
+LastName-LastName-L-07.Rmd  (add a third last name if applicable)
 
-LastName-LastName-L-08.html
+LastName-LastName-L-07.html
 
 *Due*: Monday, October 26th (beginning of class time, Eastern time)
 
