--- a/09_multiple_regression/multiple_regression.Rmd
+++ b/09_multiple_regression/multiple_regression.Rmd
@@ -37,7 +37,7 @@ found that instructors who are viewed to be better looking receive higher
 instructional ratings. 
 
 Here, you will analyze the data from this study in order to learn what goes 
-into a positive professor evaluation.
+into a positive professor evaluation. The goal is to show you how to fit and evaluate the models that you will be using in your final project.
 
 ## Getting Started
 
@@ -51,11 +51,8 @@ Let's load the packages.
 ```{r load-packages, message=FALSE}
 library(tidyverse)
 library(openintro)
-library(GGally)
 ```
 
-This is the first time we're using the `GGally` package. You will be using the
-`ggpairs` function from this package later in the lab.
 
 ### Creating a reproducible lab report
 
@@ -82,212 +79,95 @@ numerical. The meaning of each variable can be found by bringing up the help fil
 
 ## Exploring the data
 
-1.  Is this an observational study or an experiment? The original research
-    question posed in the paper is whether beauty leads directly to the
-    differences in course evaluations. Given the study design, is it possible to
-    answer this question as it is phrased? If not, rephrase the question.
+1.  Make a plot of the distribution of `score` and describe it. Is the distribution skewed? 
+    
+2.  Make a plot of the relationship between `score` and  beauty score `bty_avg` (we want to use beauty score to help us understand score) and describe this relationship. 
 
-2.  Describe the distribution of `score`. Is the distribution skewed? What does 
-    that tell you about how students rate courses? Is this what you expected to 
-    see? Why, or why not?
+3. Adapt your plot from #2 by using `col = gender` within `aes` to see how the relationship differs by gender of the faculty member. (just code and plot here, no extra interpretation)
 
-3.  Excluding `score`, select two other variables and describe their relationship 
-    with each other using an appropriate visualization.
 
 ## Simple linear regression
 
-The fundamental phenomenon suggested by the study is that better looking teachers
-are evaluated more favorably. Let's create a scatterplot to see if this appears 
-to be the case:
-
-```{r scatter-score-bty_avg}
-ggplot(data = evals, aes(x = bty_avg, y = score)) +
-  geom_point()
+```{r}
+base_model <- lm(score ~ bty_avg, data = evals)
+summary(base_model)
 ```
 
-Before you draw conclusions about the trend, compare the number of observations 
-in the data frame with the approximate number of points on the scatterplot. 
-Is anything awry?
+Using `geom_smooth` and choosing `method = "lm"` will add the simple linear regression line to the plot.
 
-4.  Replot the scatterplot, but this time use `geom_jitter` as your layer to help us with potential overplotting (where multiple points cover one another, but we only see one). What 
-    was misleading about the initial scatterplot?
-
-```{r scatter-score-bty_avg-jitter}
-ggplot(data = evals, aes(x = bty_avg, y = score)) +
-  geom_jitter()
+```{r}
+ggplot(evals, aes(x = bty_avg, y = score)) + geom_point() + geom_smooth(method = "lm", se = F)
 ```
 
-5.  Let's see if the apparent trend in the plot is something more than
-    natural variation. Fit a linear model called `m_bty` to predict average
-    professor score by average beauty rating. Write out the equation for the linear 
-    model and interpret the slope. Is average beauty score a statistically significant
-    predictor? Does it appear to be a practically significant predictor?
-    
-Add the line of the bet fit model to your plot using the following:
-    
-```{r scatter-score-bty_avg-line-se}
-ggplot(data = evals, aes(x = bty_avg, y = score)) +
-  geom_jitter() +
-  geom_smooth(method = "lm")
+4. Interpret this slope in context.
+
+5. The last column `Pr(>|t|)` gives a p-value for the hypothesis test of statistical significance for each coefficient (in this case intercept and slope for `bty_avg`). In each case the null hypothesis is that the coefficient is equal to 0 and the alternative hypothesis is that the coefficient is not equal to zero. Is the intercept statistically significantly different from zero at the 0.01 signifcance level? How about the slope?
+
+## Parallel Slopes
+
+A parallel slope approach is denoted with a plus sign between two covariates.
+
+
+```{r}
+parallel_slopes_model <- lm(score ~ bty_avg + gender, data = evals)
+summary(parallel_slopes_model)
 ```
 
-The blue line is the model. The shaded gray area around the line tells you about the 
-variability you might expect in your predictions. To turn that off, use `se = FALSE`.
+We can use `geom_abline` to specify the slope and intercept for each category so that we can draw two lines on the plot. When plotting two categories, #00BFC4 is the default color for the reference category and "#F8766D" is the default color for a second category, so we specify those to match the points. In your projects, you might want to do this more automatically. See [this reference](https://moderndive.github.io/moderndive/reference/geom_parallel_slopes.html) for guidance.
 
-```{r scatter-score-bty_avg-line}
-ggplot(data = evals, aes(x = bty_avg, y = score)) +
-  geom_jitter() +
-  geom_smooth(method = "lm", se = FALSE)
+```{r}
+ggplot(evals, aes(bty_avg, score, col = gender)) + geom_point() + geom_abline(slope = 0.07416, intercept = 3.74734, col = "#00BFC4") + geom_abline(slope = 0.07416, intercept = 3.74734 - 0.17239, col = "#F8766D")
 ```
 
-6.  Use residual plots to evaluate whether the conditions of least squares
-    regression are reasonable. Provide plots and comments for each one (see
-    the Simple Regression Lab for a reminder of how to make these).
+6. Write the equation of the regression line for females.
 
-## Multiple linear regression
-
-The data set contains several variables on the beauty score of the professor: 
-individual ratings from each of the six students who were asked to score the 
-physical appearance of the professors and the average of these six scores. Let's 
-take a look at the relationship between one of these scores and the average 
-beauty score.
-
-```{r bty-rel}
-ggplot(data = evals, aes(x = bty_f1lower, y = bty_avg)) +
-  geom_point()
-
-evals %>% 
-  summarise(cor(bty_avg, bty_f1lower))
-```
-
-As expected, the relationship is quite strong---after all, the average score is 
-calculated using the individual scores. You can actually look at the 
-relationships between all beauty variables (columns 13 through 19) using the 
-following command:
-
-```{r bty-rels}
-evals %>%
-  select(contains("bty")) %>%
-  ggpairs()
-```
-
-These variables are collinear (correlated), and adding more than one of these 
-variables to the model would not add much value to the model. This is because *given* information about one of the variables, the other one doesn't add much new information. In this 
-application and with these highly-correlated predictors, it is reasonable to use
-the average beauty score as the single representative of these variables.
-
-In order to see if beauty is still a significant predictor of professor score 
-after you've accounted for the professor's gender, you can add the gender term 
-into the model.
-
-```{r scatter-score-bty_avg_pic-color}
-m_bty_gen <- lm(score ~ bty_avg + gender, data = evals)
-summary(m_bty_gen)
-```
-
-7.  P-values and parameter estimates should only be trusted if the
-    conditions for the regression are reasonable. Verify that the conditions
-    for this model are reasonable using diagnostic plots.
-
-8.  Is `bty_avg` still a significant predictor of `score`? Has the addition
-    of `gender` to the model changed the parameter estimate for `gender`?
-
-Note that the estimate for `gender` is now called `gendermale`. You'll see this 
-name change whenever you introduce a categorical variable. The reason is that R 
-recodes `gender` from having the values of `male` and `female` to being an 
-indicator variable called `gendermale` that takes a value of $0$ for 
-female professors and a value of $1$ for male professors. (Such variables 
-are often referred to as "dummy" variables.)
-
-As a result, for female professors, the parameter estimate is multiplied by zero,
-leaving the intercept and slope form familiar from simple regression.
-
+You may want to refer to this sample formatting in the Rmd to make it look "nice".
 \[
-  \begin{aligned}
-\widehat{score} &= \hat{\beta}_0 + \hat{\beta}_1 \times bty\_avg + \hat{\beta}_2 \times (0) \\
-&= \hat{\beta}_0 + \hat{\beta}_1 \times bty\_avg\end{aligned}
+  \hat{y} = 4.61707 + 0.49143 \times pf\_expression\_control
 \]
 
-<!-- We can plot this line and the line corresponding to those with color pictures
-with the following  -->
-<!-- custom function. -->
+## Interaction Model 
 
-<!-- ```{r twoLines} -->
-<!-- ggplot(data = evals, aes(x = bty_avg, y = score, color = pic_color)) + -->
-<!--   geom_smooth(method = "lm", formula = y ~ x, se = FALSE) -->
-<!-- ``` -->
+An interaction is denoted as a product (*) between two covariates. 
 
-9.  What is the equation of the line corresponding to those with color pictures? 
-    (*Hint:* For those with color pictures, the parameter estimate is multiplied
-    by 1.) For two professors who received the same beauty rating, which color 
-    picture tends to have the higher course evaluation score?
-
-The decision to call the indicator variable `gendermale` instead of 
-`genderfemale` has no deeper meaning. R simply codes the category that 
-comes first alphabetically as a $0$. (You can change the reference level of a categorical 
-variable, which is the level that is coded as a 0, using the`relevel()` function. 
-Use `?relevel` to learn more.)
-
-10. Create a new model called `m_bty_rank` with `gender` removed and `rank` 
-    added in. How does R appear to handle categorical variables that have more 
-    than two levels? Note that the rank variable has three levels: `teaching`, 
-    `tenure track`, `tenured`.
-
-The interpretation of the coefficients in multiple regression is slightly 
-different from that of simple regression. The estimate for `bty_avg` reflects
-how much higher a group of professors is expected to score if they have a beauty
-rating that is one point higher *while holding all other variables constant*. In
-this case, that translates into considering only professors of the same rank 
-with `bty_avg` scores that are one point apart.
-
-## The search for the best model
-
-We will start with a full model that predicts professor score based on rank, 
-gender, ethnicity, language of the university where they got their degree, age, 
-proportion of students that filled out evaluations, class size, course level, 
-number of professors, number of credits, average beauty rating, outfit, and 
-picture color.
-
-11. Which variable would you expect to have the highest p-value in this model? 
-    Why? *Hint:* Think about which variable would you expect to not have any 
-    association with the professor score.
-
-Let's run the model...
-
-```{r m_full, tidy = FALSE}
-m_full <- lm(score ~ rank + gender + ethnicity + language + age + cls_perc_eval 
-             + cls_students + cls_level + cls_profs + cls_credits + bty_avg 
-             + pic_outfit + pic_color, data = evals)
-summary(m_full)
+```{r}
+interaction_model <- lm(score ~ bty_avg * gender, data = evals)
+summary(interaction_model)
 ```
 
-12. Check your suspicions from the previous exercise. Include the model output
-    in your response.
+Using `geom_smooth` and choosing `method = "lm"` will add the interaction linear regression line to the plot (ggplot knows to make a different line per gender because the points are colored by gender).
 
-13. Interpret the coefficient associated with the ethnicity variable.
+```{r}
+ggplot(evals, aes(x = bty_avg, y = score, col = gender)) + geom_point() + geom_smooth(method = "lm", se = F)
+```
 
-14. Verify that the conditions for this model are reasonable using diagnostic 
-    plots.
-    
-15. Drop the variable with the highest p-value and re-fit the model. Did the
-    coefficients and significance of the other explanatory variables change?
-    (One of the things that makes multiple regression interesting is that
-    coefficient estimates depend on the other variables that are included in
-    the model.) If not, what does this say about whether or not the dropped
-    variable was collinear with the other explanatory variables?
+7. Write the equation of the regression line for females.
 
-16. The original paper describes how these data were gathered by taking a
-    sample of professors from the University of Texas at Austin and including 
-    all courses that they have taught. Considering that each row represents a 
-    course, could this new information have an impact on any of the conditions 
-    of linear regression?
+## Which is best?
 
-17. Based on the `m_full` model, describe the characteristics of a professor and 
-    course at University of Texas at Austin that would be associated with a high
-    evaluation score.
+8. One way to define "best" is to consider how much of the variability in the scores are explained by the model. Compare the multiple R-squared values for these three models. Based on this criteria, which model is "best"?
 
-18. Would you be comfortable generalizing your conclusions to apply to professors
-    generally (at any university)? Why or why not?
+## Checking conditions
+
+```{r,eval = F}
+modelToUse = ## add name of your chosen model to the right of this equal sign
+  
+ggplot(data = modelToUse, aes(x = .resid)) +
+  geom_histogram(binwidth = 25) +
+  xlab("Residuals")
+
+ggplot(data = modelToUse, aes(x = .fitted, y = .resid)) +
+  geom_point() +
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  xlab("Fitted values") +
+  ylab("Residuals")
+```
+
+9. We've assessed linearity in Exercise 2, but are the other two conditions met for the model you chose as "best"? (normality of residuals and constant variance)
+
+## Finished early?
+
+Talk to you partner(s) about any questions you have for the exam. Alternatively, rejoin the main Zoom room if you have exam related questions, and I'll answer them in between helping groups with the lab. 
 
 ## Deliverables
 
@@ -299,7 +179,7 @@ LastName-LastName-L-08.Rmd  (add a third last name if applicable)
 
 LastName-LastName-L-08.html
 
-*Due*: Monday, November 2nd (beginning of class time, Eastern time)
+*Due*: Friday, November 6th (beginning of class time, Eastern time)
 
 
 * * *
